docs: Bump version references to 1.5.1 and update CHANGELOG with full release notes
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>